# tgc-pulpi

fw/: spim-v3.c
fw/hello-world/: Makefile  hello.c  spim-v3.c
fw/hello-world/include/rt/: rt_alloc.h  rt_api.h  rt_api_decl.h  rt_bridge.h  rt_data.h  rt_debug.h  rt_event.h  rt_extern_alloc.h  rt_freq.h  rt_himax.h  rt_hyper.h  rt_i2c.h  rt_irq.h  rt_ov7670.h  rt_perf.h  rt_periph.h  rt_pm.h  rt_sync_mc.h  rt_thread.h  rt_time.h  rt_timer.h  rt_utils.h
fw/hello-world/include/rt/chips/gap/: config.h
fw/hello-world/include/rt/data/: rt_data_bridge.h  rt_data_camera.h  rt_data_spim.h
fw/hello-world/include/rt/implem/: implem.h  utils.h
fw/hello-world/include_a/archi/: utils.h
fw/hello-world/include_a/archi/chips/pulp/: pulp.h
fw/hello-world/include_a/hal/: pulp.h
fw/hello-world/include_a/hal/debug_bridge/: debug_bridge.h
fw/hello-world/include_a/hal/riscv/: riscv_v5.h
fw/hello-world/include_a/hal/udma/: pulp.h  udma_v3.h
fw/hello-world/include_b/archi/: pulp.h  utils.h
fw/hello-world/include_b/rt/: rt_data.h
fw/hello-world/include_b/rt/data/: rt_data_spim.h
fw/hello-world/kernel/: alloc.c  dev.c
scc/src/sysc/scc/scv/: scv_tr_binary.cpp
src/: CMakeLists.txt
src/tgc_vp/: system.cpp  system.h
tgc-iss/dbt-rise-tgc/: .gitignore  CMakeLists.txt  README.md
tgc-iss/dbt-rise-tgc/contrib/: build.tcl  tgc_import.cc  tgc_import.tcl
tgc-iss/dbt-rise-tgc/gen_input/: .gitignore  TGC_C.core_desc
tgc-iss/dbt-rise-tgc/gen_input/templates/: CORENAME.cpp.gtl  CORENAME.h.gtl  CORENAME_instr.yaml.gtl
tgc-iss/dbt-rise-tgc/gen_input/templates/interp/: CORENAME.cpp.gtl
tgc-iss/dbt-rise-tgc/gen_input/templates/llvm/: vm-vm_CORENAME.cpp.gtl
tgc-iss/dbt-rise-tgc/gen_input/templates/tcc/: vm-vm_CORENAME.cpp.gtl
tgc-iss/dbt-rise-tgc/incl/iss/: factory.h
tgc-iss/dbt-rise-tgc/incl/iss/arch/: .gitignore  hwl.h  riscv_hart_common.h  riscv_hart_m_p.h  riscv_hart_msu_vp.h  riscv_hart_mu_p.h
tgc-iss/dbt-rise-tgc/incl/iss/debugger/: riscv_target_adapter.h
tgc-iss/dbt-rise-tgc/incl/iss/plugin/: cycle_estimate.h  instruction_count.h  pctrace.h
tgc-iss/dbt-rise-tgc/incl/sysc/: core_complex.h
tgc-iss/dbt-rise-tgc/src/: main.cpp
tgc-iss/dbt-rise-tgc/src/iss/: .gitignore
tgc-iss/dbt-rise-tgc/src/plugin/: cycle_estimate.cpp  instruction_count.cpp  pctrace.cpp
tgc-iss/dbt-rise-tgc/src/sysc/: core_complex.cpp
tgc-iss/dbt-rise-tgc/src/vm/interp/: .gitignore
tgc-iss/dbt-rise-tgc/src/vm/llvm/: vm_tgf_b.cpp  vm_tgf_c.cpp
tgc-iss/dbt-rise-tgc/src/vm/tcc/: vm_tgf_b.cpp  vm_tgf_c.cpp
vpvper/: CMakeLists.txt
vpvper/pulpissimo/: spim.cpp  spim.h  udma.cpp  udma.h
